--- a/views/connectWithMe.ejs
+++ b/views/connectWithMe.ejs
@@ -26,7 +26,7 @@
       <br>
     </div>
     <div class="form-group">
-      Are you willing to receive further connection messages from us?<br>
+      Are you willing to receive further connection messages from us and your peers??<br>
       <input class="form-check-input" type="radio" name="answer" value="0">
       <label class="form-check-label">yes</label><br>
       <input class="form-check-input" type="radio" name="answer" value="-1">
