add new feature

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,43 @@
 
-<h1>
-  About -- Developers
-</h1>
-<ul>
-  <li>Tim Hickey</li>
-  <li>Jiaxin Li</li>
-</ul>
 
+<style col>
+  .myDiv {
+    border: 5px outset rgb(0, 0, 0);
+    background-color: rgb(184, 219, 238);
+    text-align: center;
+  }
+  </style>
+
+
+    <div class="myDiv col">
+      <h1>Siyu Yang</h1>
+      <p>Some fun facts about me...</p>
+      <p>
+  I am a rising junior in Brandeis and major in Computer Science and Economics.
+      </p>
+      <p>
+        I grew up in Beijing from 5 to 18.
+      </p>
+
+      <div >
+        <h2>
+          Places I lived ..
+        </h2>
+        <ul>
+
+          <li> Dalian, China</li>
+          <li> Beijing, China</li>
+          <li> Boston, The US</li>
+        </ul>
+
+        <h2>To Connect:
+        </h2>
+        <li> Email:  siyuyang@brandeis.edu</li>
+          <li>Waltham, MA</li>
+      </div>
+
+
+    </div>
+
+
+  </div>
