--- a/views/toDo.ejs
+++ b/views/toDo.ejs
@@ -22,7 +22,7 @@
     <form method="post" action="/todo/add">
         title:<input type="text" name="title"><br>
         description:<input type="text" name="description"><br>
-        <input type="submit" value="Save Item"><br>
+        <input type="submit" class="btn btn-primary" value="Save Item"><br>
     </form>
     
 
