--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,13 @@
 
 
     <div class="jumbotron">
-        <h1>PA03: Course Finder Fall20-Spr21 </h1>
+        <h1>Course Finder Fall20-Spr21 </h1>
         <p></p>
     </div>
 
     <p class="p-3 m-3 border border-primary bg-light">
         The goal of this assignment is to write an app that will let
-        students pick their courses for the year. Since we don't have
-        the data for this year (due to workday issues), we will use the
+        students pick their courses for the year based on
         2020-2021 Academic year data. You must signup or login to see
         the courses and create your schedule.
     </p>
@@ -18,28 +17,28 @@
             Show Courses by Subject:
               <input type="text" name="subject"
                      placeholder="e.g. COSI">
-            <input type="submit">
+            <input type="submit" class="btn btn-primary">
         </form>
         <br>
         <form method="post" action="/courses/byInst">
             Show Courses by Instructor Email:
             <input type="text" name="email"
                    placeholder="e.g. tjhickey">
-            <input type="submit">
+            <input type="submit" class="btn btn-primary">
         </form>
         <br>
         <form method="post" action="/courses/byKeyword">
             Show Courses by Keyword:
             <input type="text" name="keyword"
                    placeholder="e.g. Java">
-            <input type="submit">
+            <input type="submit" class="btn btn-primary">
         </form>
         <br>
         <form method="post" action="/courses/byDay">
             Show Courses by Day:
             <input type="text" name="day"
                    placeholder="e.g. tu (for Tuesday)">
-            <input type="submit">
+            <input type="submit" class="btn btn-primary">
         </form>
         <br>
         <a href="/schedule/show">Show Schedule</a>
