--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,12 +35,15 @@
 
           <ul class="navbar-nav justify-content-right">
             <li class="nav-item">
+              <a class="nav-link" href="/weather"><b>Weather</b></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/about"><b>About</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/connectWithMe"><b>Connect</b></a>
             </li>
-          
+
 
 
 
